--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=7110
 ## Database Properties
 spring.datasource.url = jdbc:mysql://localhost:3306/spring
 spring.datasource.username = root
-spring.datasource.password = adminmysql
+spring.datasource.password = root
 
 
 ## Hibernate Properties
